--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "tailwindcss": "^3.4.10"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1"
+    "@emailjs/browser": "^4.4.1",
+    "glob": "^13.0.0"
   }
 }
